Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,9 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
+- task: BatchScript@1
+  inputs:
+    filename: '$(System.DefaultWorkingDirectory)\'
 - script: echo Hello, world!
   displayName: 'Run a one-line script'
 
